--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
-name: "Pavel tmate add-ons"
+name: "Pavel upterm add-ons"
 url: "https://github.com/navrkalpavel/hatmatedcoker"
 maintainer: "Pavel Navrkal"
 
